--- a/styles/barchart.css
+++ b/styles/barchart.css
@@ -7,6 +7,11 @@
     display: flex;
     align-items: center;
     border-radius: 10px;
+    transition: background-color var(--duration) var(--transition-style);
+}
+
+.placement:hover {
+    background-color: rgba(0, 128, 0, 0.493);
 }
 
 .chart {
