--- a/styles/barchart.css
+++ b/styles/barchart.css
@@ -7,11 +7,11 @@
     display: flex;
     align-items: center;
     border-radius: 10px;
-    transition: background-color var(--duration) var(--transition-style);
+    transition: box-shadow var(--duration) var(--transition-style);
 }
 
 .placement:hover {
-    background-color: rgba(0, 128, 0, 0.493);
+    box-shadow: -10px -5px 5px var(--transition-color);
 }
 
 .chart {
