--- a/styles/projects.css
+++ b/styles/projects.css
@@ -143,6 +143,11 @@ a:hover {
     height: 200px
 }
 
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
 /* Popup CSS */
 /* .button_empty {
     display: none;
