--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -147,3 +147,8 @@
     vertical-align: middle;
     line-height: 75px; /* <-- Keep the same as .bottom-bar height */
 }
+
+.date {
+    font-style: italic;
+    text-align: right;
+}
